# netflix-writers

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  bad_example.py  messy_example.py  netflix-writer copy.ipynb  netflix-writer.ipynb  netflix_review_concepts.ipynb  netflix_review_concepts_capstone.ipynb  netflix_review_concepts_module_2.ipynb  netflix_review_concepts_module_3.ipynb  netflix_review_concepts_module_4.ipynb  notes.txt  package.json  pyproject.toml  release.config.js  stats_utils.py  temp.txt  test_stats_utils.py  typed_example.py
changelogs/: CHANGELOG.md
docs/: KAGGLE.md
netflix/: __version__.py  const.py
netflix/fetch/: __init__.py  __main__.py  const.py  dataset.py  fetch_imdb.py  fetch_kaggle_netflix.py  fetch_kaggle_tmdb.py  fetch_polti.py  lib.py
requirements/in/: base.in
scripts/: bump_version.py
setup/macos/: .zshrc.example  README.md  setup.sh
