[project]
name = "netflix-writers"
version = "0.1.1-alpha.1"
requires-python = ">=3.12"
description = "Netflix Writers: An AI-powered storytelling assistant for content creators."
authors = [{ name = "Lawrence McDaniel", email = "lpm0073@gmail.com" }]
license = { file = "LICENSE" }
keywords = ["AI", "Kaggle", "Python"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: GNU AGPL v3 or later (AGPLv3+)",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: API",
    "Natural Language :: English",
    "Development Status :: 4 - Beta"
]

[tool.setuptools.packages.find]
include = ["netflix*"]

[project.urls]
homepage = "https://github.com/netflix-writers/"
documentation = "https://github.com/netflix-writers/"
repository = "https://github.com/netflix-writers/netflix"
bugtracker = "https://github.com/netflix-writers/netflix/issues"
changelog = "https://github.com/netflix-writers/netflix/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=80.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.env
  | venv
  | node_modules
  | build
  | buck-out
  | build
  | dist
  | __pypackages__
  |.pypi_cache
  | .pytest_cache
  | .coverage
  | htmlcov
  | .eggs
  | .idea
)/
'''
